@@ -23,6 +23,7 @@ in development
 - Upgraded busybox, eudev, lvm2, e2fsprogs, squashfs-tools, dropbear,
   linux-firmware, intel-ucode, wireless-regdb, zfs.
 - Overhauled command line parsing using getopt with better usage description.
+- Added help2man generated man page.
 
 * v0.17.2
 2022-01-16: RuckusRD v0.17.2
